[package]
name = "epicars"
version = "0.2.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/ndevenish/epicars"
description = "Standalone, pure rust implementation of EPICS CA protocol"

[dependencies]
nom = "8.0.0"
num = "0.4.3"
num-traits = "0.2.19"
pnet = { version = "0.35.0", default-features = false, features = [
    "pnet_datalink",
    "std",
] }
socket2 = { version = "0.5.8", features = ["all"] }
thiserror = "2.0.11"
tokio = { version = "1.43.1", features = [
    "macros",
    "net",
    "rt",
    "time",
    "io-util",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = "0.1.17"
tokio-util = {version = "0.7.13", features = ["codec"]}
tracing = "0.1.41"
whoami = { version = "1.6.0", default-features = false }

[dev-dependencies]
clap = { version = "4.5.43", features = ["derive"] }
colored = "3.0.0"
time = { version = "0.3.43", features = ["formatting", "macros"] }
tracing-subscriber = { version = "=0.3.19", features=["local-time"] }
